# opentrons_rest_api

./: .gitignore  .pylintrc  DEVELOPER.md  LICENSE  README.md  install.sh  opentrons-rest-server.service  pyproject.toml
aws/: buildspec.yml  run_tests.sh
server/: server.py
server/debug/: server_debug.py
tests/server/: biorad_96_wellplate_200ul_pcr.json  blowout.json  mix_settings_command.json  mix_settings_command_blowout.json  move_to_command.json  partial_transfer_aspirate_commad.json  partial_transfer_aspirate_command_with_airgap_and_blowout.json  test_server_commands.py  test_server_mocks.py  tip_touch.json
